# phantom-vault

./: .gitignore  CHANGELOG.md  CLAUDE_CODE_WIRING.md  Cargo.toml  DECOY.md  LICENSE  MERGE_NOTES.md  QUICKSTART.md  README.md  USER_MANUAL.md  install.sh
.github/workflows/: ci.yml  install-test.yml  release.yml
crates/phantom-analyzer/: Cargo.toml
crates/phantom-analyzer/src/: lib.rs  parser.rs  patterns.rs  policy.rs
crates/phantom-cli/: Cargo.toml
crates/phantom-cli/src/: interactive.rs  main.rs  sandbox_fs.rs
crates/phantom-core/: Cargo.toml
crates/phantom-core/src/: audit.rs  canary.rs  crypto.rs  dependency.rs  lib.rs  memory.rs  namespace.rs  rotation.rs  storage.rs  vault.rs
crates/phantom-hardware/: Cargo.toml
crates/phantom-hardware/src/: fallback.rs  fido2.rs  lib.rs  secure_enclave.rs  tpm.rs
crates/phantom-mcp/: Cargo.toml
crates/phantom-mcp/src/: config.rs  lib.rs  lineage.rs  server.rs  tools.rs
crates/phantom-sandbox/: Cargo.toml
crates/phantom-sandbox/src/: jail.rs  lib.rs  network.rs  spawn.rs
crates/phantom-sandbox/src/platform/: linux.rs  macos.rs
crates/phantom-sanitizer/: Cargo.toml
crates/phantom-sanitizer/benches/: sanitizer_bench.rs
crates/phantom-sanitizer/src/: encoded.rs  exact.rs  lib.rs  timing.rs  window.rs
crates/phantom-security-tests/: Cargo.toml
crates/phantom-security-tests/src/: lib.rs
crates/phantom-security-tests/tests/: adversarial_exfil.rs  canary.rs  lineage.rs  memory.rs  namespace.rs  oracle_attack.rs  sanitization.rs
crates/vault-core/: Cargo.toml
crates/vault-core/src/: audit.rs  crypto.rs  error.rs  filter.rs  lib.rs  models.rs  storage.rs
crates/vault-mcp/: Cargo.toml
crates/vault-mcp/src/: handlers.rs  lib.rs  main.rs  registry.rs  server.rs  state.rs
crates/vault-tauri/: Cargo.toml
crates/vault-tauri/src/: commands.rs  lib.rs
docs/: ARCHITECTURE.md  CURRENT_STATE.md  INDEX.md  KNOWN_ISSUES.md  MCP_PROTOCOL.md  PROVIDER_USAGE_RESEARCH_2026-05-12.md  SECURITY_AUDIT.md  SECURITY_RESEARCH.md  THREAT_MODEL.md
flutter-ui/: pubspec.yaml
flutter-ui/lib/: main.dart
flutter-ui/lib/core/bridge/: tauri_bridge.dart  tauri_bridge_stub.dart  tauri_bridge_web.dart
flutter-ui/lib/core/models/: secret_entry.dart
flutter-ui/lib/core/services/: theme_service.dart  vault_service.dart
flutter-ui/lib/features/add_secret/: add_secret_screen.dart
flutter-ui/lib/features/secret_detail/: secret_detail_screen.dart
flutter-ui/lib/features/secrets_list/: secrets_list_screen.dart
flutter-ui/lib/features/settings/: settings_screen.dart
flutter-ui/lib/features/unlock/: unlock_screen.dart
flutter-ui/lib/widgets/: secret_card.dart
marketing/: LANDING_DRAFT.md
native/: Cargo.toml
native/src/: api.rs  biometric.rs  lib.rs
site/: index.html
tauri-app/: Cargo.toml  tauri.conf.json
tauri-app/src/: main.rs
