[workspace]
resolver = "2"
members = [
    "crates/vault-core",
    "crates/vault-mcp",
    "crates/vault-tauri",
    "native",
    "tauri-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Vault Secrets Team"]
description = "Secure credential management for LLM tools"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"

# Secure memory
zeroize = { version = "1.7", features = ["derive"] }
secrecy = "0.8"

# MCP Protocol
rmcp = { version = "0.1", features = ["server", "transport-io"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
regex = "1.10"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tauri
tauri = { version = "2.0", features = [] }
tauri-plugin = "2.0"
tauri-build = "2.0"

# System
dirs = "5.0"
