[workspace]
resolver = "2"
members = [
    "crates/phantom-core",
    "crates/phantom-sanitizer",
    "crates/phantom-analyzer",
    "crates/phantom-sandbox",
    "crates/phantom-mcp",
    "crates/phantom-hardware",
    "crates/phantom-cli",
    "crates/phantom-security-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/r-db/phantom-vault"
authors = ["Phantom Vault Contributors"]

[workspace.dependencies]
# Cryptography
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Memory protection
memsec = "0.7"
region = "3.0"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# MCP / JSON-RPC
jsonrpsee = { version = "0.22", features = ["server"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Testing
tempfile = "3.10"
base64 = "0.22"

# Internal crates
phantom-core = { path = "crates/phantom-core" }
phantom-sanitizer = { path = "crates/phantom-sanitizer" }
phantom-analyzer = { path = "crates/phantom-analyzer" }
phantom-sandbox = { path = "crates/phantom-sandbox" }
phantom-mcp = { path = "crates/phantom-mcp" }
phantom-hardware = { path = "crates/phantom-hardware" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
