[workspace]
resolver = "2"
members = [
    "crates/phantom-cli",
    "crates/vault-mcp",
    "crates/phantom-core",
    "crates/phantom-sanitizer",
    "crates/phantom-analyzer",
    "crates/phantom-sandbox",
    "crates/phantom-mcp",
    "crates/phantom-security-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
authors = ["Vault Secrets Team"]
description = "Secure credential management for LLM tools"
# Ported secure crates inherit this via `repository.workspace = true`.
repository = "https://github.com/r-db/phantom-vault"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Cryptography
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"

# Secure memory
zeroize = { version = "1.7", features = ["derive"] }
secrecy = "0.8"

# Storage (phantom-core encrypted SQLite backend)
rusqlite = { version = "0.31", features = ["bundled"] }

# Memory protection (phantom-core SecretBuffer)
memsec = "0.7"
region = "3.0"

# MCP Protocol
rmcp = { version = "0.1", features = ["server", "transport-io"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
regex = "1.10"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"

# Tauri
tauri = { version = "2.0", features = [] }
tauri-plugin = "2.0"
tauri-build = "2.0"

# System
dirs = "5.0"

# Testing
tempfile = "3.10"

# Internal secure crates (ported from the fork)
phantom-core = { path = "crates/phantom-core" }
phantom-sanitizer = { path = "crates/phantom-sanitizer" }
phantom-analyzer = { path = "crates/phantom-analyzer" }
phantom-sandbox = { path = "crates/phantom-sandbox" }
phantom-mcp = { path = "crates/phantom-mcp" }
