[package]
name = "phantom-cli"
version = "1.1.1"
edition = "2021"
description = "Phantom Vault CLI - secure secret management for AI agents"
authors = ["Riscent"]
license = "Apache-2.0"

[[bin]]
name = "phantom"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Vault core functionality
vault-core = { path = "../vault-core" }

# Async runtime
tokio = { workspace = true }

# Password input
rpassword = "7.3"

# Directories
dirs = { workspace = true }

# JSON handling for MCP config
serde_json = { workspace = true }

# Timestamps
chrono = { workspace = true }

# TTY detection
atty = "0.2"

# TOML parsing for policy files
toml = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.11"
