[package]
name = "phantom-cli"
description = "CLI binary for Phantom Vault - LLM-safe secret management"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "phantom-vault"
path = "src/main.rs"

[dependencies]
phantom-core = { workspace = true }
phantom-sanitizer = { workspace = true }
phantom-analyzer = { workspace = true }
phantom-sandbox = { workspace = true }
phantom-mcp = { workspace = true }
phantom-hardware = { workspace = true }

clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

# Terminal UI
rpassword = "7.3"
console = "0.15"
