[package]
name = "phantom-core"
description = "Core encryption, storage, and memory protection for Phantom Vault"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aes-gcm.workspace = true
chacha20poly1305.workspace = true
argon2.workspace = true
rand.workspace = true
zeroize.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
memsec.workspace = true
region.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true

# Additional crypto dependencies
ring = "0.17"
libc = "0.2"
subtle = "2.5"

[dev-dependencies]
tempfile.workspace = true
