[package]
name = "vault-core"
version.workspace = true
edition.workspace = true
description = "Core vault functionality: encryption, storage, filtering"

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Cryptography
aes-gcm.workspace = true
argon2.workspace = true
rand.workspace = true
sha2.workspace = true

# Secure memory
zeroize.workspace = true
secrecy.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
regex.workspace = true
lazy_static.workspace = true
tracing.workspace = true

# Async
tokio = { workspace = true, features = ["fs", "sync", "time"] }

# System
dirs.workspace = true

[dev-dependencies]
tempfile = "3.9"
tokio-test = "0.4"
