[package]
name = "vault-mcp"
version = "1.0.0"
edition = "2021"
description = "MCP server for secure credential injection"
authors = ["Vault Secrets Team"]
license = "MIT"

[dependencies]
# Workspace dependencies
vault-core = { path = "../vault-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# MCP SDK
rmcp = { workspace = true }

# Async runtime utilities
futures = "0.3"

# For reading password from terminal
rpassword = "7.3"

[dev-dependencies]
tempfile = "3.10"
