[package]
name = "vault-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server binary that launches the safe phantom-vault scheme (analyzer -> egress-jailed sandbox -> sanitizer)"
authors = ["Vault Secrets Team"]
license = "MIT"

[[bin]]
name = "vault-mcp"
path = "src/main.rs"

[dependencies]
# Secure core (ported from the fork) — the vault + the safe MCP tool scheme.
phantom-core = { workspace = true }
phantom-mcp = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

# Hidden password prompt for interactive (non-MCP) invocations.
rpassword = "7.3"
