[package]
name = "vault-tauri"
version = "0.1.0"
edition = "2021"
description = "Tauri plugin for vault desktop integration"
authors = ["Vault Secrets Team"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vault-core = { path = "../vault-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Tauri dependencies - commented out until Tauri app is set up
# tauri = { workspace = true }
# tauri-plugin = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
